[metadata]
name = rxv
description = Automation Library for Yamaha RX-V473, RX-V573, RX-V673, RX-V773 receivers
long_description = file: README.md
long_description_content_type = text/x-rst
maintainer = Wojciech Bederski
maintainer-email = github@wuub.net
author = Wojciech Bederski
author-email = github@wuub.net
url = https://github.com/wuub/rxv
project_urls =
    Source=https://github.com/wuub/rxv
    Tracker=https://github.com/wuub/rxv/issues
platforms = any
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: tox
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Home Automation,
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    requests
    defusedxml

[options.extras_require]
testing =
    black
    flake8
    mock
    pytest
    pytest-cov 
    pytest-timeout
    requests-mock

[wheel]
universal = 1

[tox:tox]
minversion = 3.7
isolated_build = true
skip_missing_interpreters = true
envlist =
	flake8
    {py37,py38,py39}

[gh-actions]
python =
    3.7: py37
    3.8: py38, flake8
    3.9: py39

[coverage:run]
source_pkgs=
	rxv

[testenv]
extras = testing
commands = py.test --cov --cov-report=term --cov-report=xml {posargs}

[testenv:flake8]
description = run flake8 under {basepython}
commands = flake8 rxv/ tests/ 
extras = testing

[flake8]
exclude = .cache,.git,.tox,.eggs,build,docs/*,*.egg-info
max-line-length = 100

[isort]
skip = .tox,.eggs
